--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@types/node": "^22.1.0",
-    "@types/react": "^18.3.3",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "@tanstack/eslint-plugin-query": "^5.53.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
@@ -37,7 +37,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4",
+    "typescript": "5.6.2",
     "typescript-eslint": "^8.0.0"
   }
 }
